# Prismiq

./: .env.example  .gitignore  Makefile  README.md  config.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py
data/: github_extract.py  job_market_extract.py  kaggle_extract.py  resources.py
kg/: __init__.py  kg_chat.py  kg_retrieval.py  load_kg.py  schema.py
llm/: __init__.py  chat.py  evaluator.py  extract.py  generator.py  round_filter.py  seeds.py
tests/: conftest.py  test_chat_resources.py  test_config.py  test_config_models.py  test_kg_integrity.py  test_seeds.py
