[project]
name = "prismiq"
version = "1.0.0"
description = "AI-Powered Interview Preparation Platform using Knowledge Graphs + LLMs"
requires-python = ">=3.10"
authors = [
    { name = "Nidhi Nair" },
    { name = "Riyanshi Kedia" },
    { name = "Tirth Patel" },
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
